# modus

./: CLAUDE.md  Cargo.toml  README.md  run.bat  tmp_replace.py
.claude/: settings.json  settings.local.json
examples/: 4_column_structure.ods.json  4_column_structure_data.csv  README.md  beam_data.csv  beam_edges.csv  beam_nodes.csv  model.ods.json  vibrating_beam.ods.json  vibrating_beam_data.csv
src/: app.rs  app_ui.rs  coord_sys_builder.rs  create_nodes.rs  csv_io.rs  csys_builder.rs  data.rs  entities.rs  export_video.rs  fft.rs  main.rs  mesh_gen.rs  palette.rs  persist.rs  renderer.rs  table.rs  table_ui.rs  time_plot.rs  viewport.rs
src/shaders/: viewport.wgsl
